[package]
name = "light"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }

http-types = "2.12.0"
async-trait = "0.1.73"
bytes = "1.4.0"
serde = { version = "1.0.186", features = ["derive"] }

thiserror = "1.0.47"
