[package]
name = "light"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
hyper = { version = "1.0.0-rc.4", features = ["full"] }
http-body-util = "0.1.0-rc.3"
hyper-util = { git = "https://github.com/hyperium/hyper-util.git" }
http-types = { version = "2.12.0", features = ["hyperium_http"] }

async-trait = "0.1.73"
bytes = "1.4.0"
serde = { version = "1.0.186", features = ["derive"] }

thiserror = "1.0.47"
